# snow-rustler

./: Cargo.toml  LICENCE  readme.md
src/: auth.rs  lib.rs
src/snowflake_api/: client.rs  models.rs
