[package]
name = "snow_rustler"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
mockall = { version = "0.12.1" }
serde_json = "1.0.114"

[dev-dependencies]
httpmock = "0.7.0"
tokio = { version = "1", features = ["full"] }
